--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -1,12 +1,4 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" id="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0">
-    <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/style.css">
-    <title>Web Rebels Conference 2013</title>
-</head>
+<% include head.ejs %>
 <body id="body" class="front">
     <div class="logo"></div>
 
@@ -29,19 +21,4 @@
         <a href="/speaker/#robert" class="speaker david"></a>
         <a href="/speaker/#robert" class="speaker magnars"></a>
     </main>
-
-    <footer class="foot">
-        <aside>
-            <div>
-                <h1 class="title">23-24th May</h1>
-                <h2 class="title">Oslo, Norway</h2>
-            </div>
-        </aside>
-
-        <section>
-            <!-- Sponsors goes here -->
-        </section>
-    </footer>
-    <script src="js/script.js"></script>
-</body>
-</html>
+<% include footer.ejs %>
