added some more stuff that trygve mentioned

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,8 +4,12 @@
 
 <p>The Web Rebels conference takes place on the 23-24th of May 2013 in Oslo, Norway. We are a non-profit, community driven conference for everyone who loves developing applications and services using web technology. We had a great time hosting the conference for the first time last year and we are very excited to once again welcome all of our friends around the world!</p>
 
-<p>We love our community and we <a href="http://bit.ly/wr-love">gave away 30% of the profits made last year</a> to community groups throught the Nordic region.
+<p>We love our community and we <a href="http://bit.ly/wr-love">gave away 30% of the profits made last year</a> to community groups throught the Nordic region.</p>
 
 <p>We love all things related to developing on and for the web: the cornerstones today like JavaScript and standards, new languages such as TypeScript or mature alternatives such as ClojureScript, potentially disruptive technology like WebRTC or PhoneGap , and the tools we use to create amazing experiences. We would love to have people talk about all of it at our conference!</p>
 
+<p>Everyone taking part in the Web Rebels Conference must abide by the <a href="http://jsconf.com/codeofconduct.html">JSConf Code of Conduct</a>. We all want these couple of days to be unforgettable, so let's just have a great time!</p>
+
+<h2>Contact us</h2>
+<p>Any questions you might have, please do not hesitate to <a href="mailto:boyhowdy[ replace this bracket with a @ ]webrebels.org&gt;">shoot us an email</a> or contact us <a href="http://twitter.com/web_rebels/">on the twitters</a>.</p>
 <% include footer.ejs %>
