--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -11,6 +11,10 @@
 	<li>Access to the conference party</li>
 </ul>
 
+<h2>You can travel and stay in Norway cheaply</h2>
+<p><a href="http://norwegian.no">Norwegian</a> and <a href="http://sas.no">Scandinavian Airlines</a> both have lower priced tickets on sale which you can get if you make reservations early. Norwegian tends to be the cheapest option.</p>
+<p>Hotels can be expensive, so we've arranged for a rebel discount on the hotels at the venue. Read about the <a href="/location">hotel discounts</a> for more information.</p>
+
 <a href="http://webrebels.eventbrite.com/">Go grab your ticket!</a>
 
 <% include footer.ejs %>
