more hotel info and a small change..

--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -10,7 +10,7 @@
 <body id="body" class="front">
     <div class="logo"></div>
 
-    <% include menu.ejs %>
+    <% include snips/menu.ejs %>
 
     <main class="main">
         <a href="/speaker/#garann" class="speaker garann"></a>
@@ -19,4 +19,4 @@
         <a href="/speaker/#robert" class="speaker magnars"></a>
     </main>
     <script src="/js/script.js"></script>
-<% include footer.ejs %>
+<% include snips/footer.ejs %>
