--- a/views/sponsors.ejs
+++ b/views/sponsors.ejs
@@ -1,4 +1,4 @@
-<% include head.ejs %>
+<% include snips/head.ejs %>
 
 <h1>Sponsorship options</h1>
 
@@ -64,4 +64,4 @@
 
 <p>Interested in sponsoring Web Rebels? If you want to find out more, <a href="mailto:sponsors[ replace this bracket with a @ ]webrebels.org&gt;">contact us today</a>.</p>
 
-<% include footer.ejs %>
+<% include snips/footer.ejs %>
