--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<% include head.ejs %>
+<% include snips/head.ejs %>
 
 <h1>About the Web Rebels Conference</h1>
 
@@ -12,4 +12,4 @@
 
 <h2>Contact us</h2>
 <p>Any questions you might have, please do not hesitate to <a href="mailto:boyhowdy[ replace this bracket with a @ ]webrebels.org&gt;">shoot us an email</a> or contact us <a href="http://twitter.com/web_rebels/">on the twitters</a>.</p>
-<% include footer.ejs %>
+<% include snips/footer.ejs %>
