--- a/views/openmic.ejs
+++ b/views/openmic.ejs
@@ -1,4 +1,4 @@
-<% include head.ejs %>
+<% include snips/head.ejs %>
 
 <h1>Open Mic Night</h1>
 
@@ -23,4 +23,4 @@
 	<p>If you would like to try yourself on the stage you are more then welcome too. Prepare a  talk, ~10 minutes, on any relevant topic you like and send us your abstract in an email to <a href="mailto:openmic@webrebels.org">openmic@webrebels.org</a> before the 20th of May with your name and the title of your talk and we will give you the stage!</p>
 	
             
-<% include footer.ejs %>
+<% include snips/footer.ejs %>
