--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -1,4 +1,4 @@
-<% include head.ejs %>
+<% include snips/head.ejs %>
 
 <h2>Relax, we've got you covered</h2>
 
@@ -17,4 +17,4 @@
 
 <a href="http://webrebels.eventbrite.com/">Go grab your ticket!</a>
 
-<% include footer.ejs %>
+<% include snips/footer.ejs %>
