--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -19,4 +19,18 @@
         <a href="/speaker/#robert" class="speaker magnars"></a>
     </main>
     <script src="/js/script.js"></script>
-<% include snips/footer.ejs %>
+
+    <footer class="foot">
+        <aside>
+            <div>
+                <h1 class="title">23-24th May</h1>
+                <h2 class="title">Oslo, Norway</h2>
+            </div>
+        </aside>
+
+        <section>
+            <!-- Sponsors goes here -->
+        </section>
+    </footer>
+</body>
+</html>
