--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -1,15 +1,10 @@
 
     <footer class="foot">
-        <aside>
-            <div>
-                <h1 class="title">23-24th May</h1>
-                <h2 class="title">Oslo, Norway</h2>
-            </div>
-        </aside>
-
-        <section>
-            <!-- Sponsors goes here -->
-        </section>
+        <p>
+            <a href="http://twitter.com/">Twitter</a>
+            <a href="http://lanyrd.com/2013/webreb/">Lanyrd</a>
+            <a href="https://vimeo.com/channels/wr2012">Vimeo</a>
+        </p>
     </footer>
 </body>
 </html>
