--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <% include snips/head.ejs %>
 
 <h1>About the Web Rebels Conference</h1>
-
+<a href="http://www.flickr.com/photos/webrebels/7280977004/"><img src="/gfx/lagbilde_color.jpg"></a>
 <p>The Web Rebels conference takes place on the 23-24th of May 2013 in Oslo, Norway. We are a non-profit, community driven conference for everyone who loves developing applications and services using web technology. We had a great time hosting the conference for the first time last year and we are very excited to once again welcome all of our friends around the world!</p>
 
 <p>We love our community and we <a href="http://bit.ly/wr-love">gave away 30% of the profits made last year</a> to community groups throught the Nordic region.</p>
