--- a/views/location.ejs
+++ b/views/location.ejs
@@ -30,13 +30,13 @@
 
 <h2>Conference hotels</h2>
 <strong><a href="http://www.scandichotels.no/Hotels/Countries/Norge/Oslo/Hotels/Vulkan/#.UR6ROqvipms">Scandic Hotel Vulkan</a></strong>
-<p>This is the hotel where we'll be putting our speakers. It is right next door to the venue and we have been able to get a Web Rebel discount.</p>
+<p><img src="/gfx/location/vulkan.jpg">This is the hotel where we'll be putting our speakers. It is right next door to the venue and we have been able to get a Web Rebel discount.</p>
 
 <strong><a href="http://www.comforthotelxpress.no/">Comfort Hotel xPress Oslo</a></strong>
-<p><img src="/gfx/xpress.jpg">One of the coolest new hotels in the city, similar to the <a href="http://yotel.com">Yotel concept</a> in other cities. It's located right in the <a href="https://www.google.com/maps?q=m%C3%B8llergata+26+oslo&hl=no&ie=UTF8&sll=61.143235,9.09668&sspn=0.007953,0.018969&z=16">heart of rock'n roll Oslo</a> and still within decent walking distance of the venue. Free WiFi, naturally.</p>
+<p><img src="/gfx/location/xpress.jpg">One of the coolest new hotels in the city, similar to the <a href="http://yotel.com">Yotel concept</a> in other cities. It's located right in the <a href="https://www.google.com/maps?q=m%C3%B8llergata+26+oslo&hl=no&ie=UTF8&sll=61.143235,9.09668&sspn=0.007953,0.018969&z=16">heart of rock'n roll Oslo</a> and still within decent walking distance of the venue. Free WiFi, naturally.</p>
 
 <strong><a href="http://www.pshotell.no/">PS:Hotell</a></strong>
-<p><img src="/gfx/pshotell.jpg">We're also happy that there is a cheaper hotel at the premises, just 20-30 m from the venue, which has extremely low prices. You can <a href="http://www.booking.com/hotel/no/ps-hotell.en.html?aid=311984;label=ps-hotell-bXkLeXsmoaqxr8VMHx83HQS11220884953:pl:ta:p1:p2:ac:ap1s1:nes;ws=&gclid=COnHk_HStrUCFclZ3godNCgAYQ">make reservations online</a>.</p>
+<p><img src="/gfx/location/pshotell.jpg">We're also happy that there is a cheaper hotel at the premises, just 20-30 m from the venue, which has extremely low prices. You can <a href="http://www.booking.com/hotel/no/ps-hotell.en.html?aid=311984;label=ps-hotell-bXkLeXsmoaqxr8VMHx83HQS11220884953:pl:ta:p1:p2:ac:ap1s1:nes;ws=&gclid=COnHk_HStrUCFclZ3godNCgAYQ">make reservations online</a>.</p>
 
 <h2>Getting there</h2>
 
