--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,15 +1,40 @@
-<% include snips/head.ejs %>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" id="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/style.css">
+    <title><%=pageTitle%></title>
+    <script>
+        var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26864429-1']); _gaq.push(['_setDomainName', 'webrebels.org']); _gaq.push(['_trackPageview']);
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+</head>
+<body class="page">
 
-<h1>About the Web Rebels Conference</h1>
-<a href="http://www.flickr.com/photos/webrebels/7280977004/"><img src="/gfx/lagbilde_color.jpg"></a>
-<p>The Web Rebels conference takes place on the 23-24th of May 2013 in Oslo, Norway. We are a non-profit, community driven conference for everyone who loves developing applications and services using web technology. We had a great time hosting the conference for the first time last year and we are very excited to once again welcome all of our friends around the world!</p>
+    <% include snips/logo.ejs %>
+    <% include snips/menu.ejs %>
 
-<p>We love our community and we <a href="http://bit.ly/wr-love">gave away 30% of the profits made last year</a> to community groups throught the Nordic region.</p>
+    <article class="wrap">
+		<a class="fullWidthImg" href="http://www.flickr.com/photos/webrebels/7280977004/"><img src="/gfx/lagbilde_color.jpg"></a>
 
-<p>We love all things related to developing on and for the web: the cornerstones today like JavaScript and standards, new languages such as TypeScript or mature alternatives such as ClojureScript, potentially disruptive technology like WebRTC or PhoneGap , and the tools we use to create amazing experiences. We would love to have people talk about all of it at our conference!</p>
+		<h1>About the Web Rebels Conference</h1>
+		<p>The Web Rebels conference takes place on the 23-24th of May 2013 in Oslo, Norway. We are a non-profit, community driven conference for everyone who loves developing applications and services using web technology. We had a great time hosting the conference for the first time last year and we are very excited to once again welcome all of our friends around the world!</p>
 
-<p>Everyone taking part in the Web Rebels Conference must abide by the <a href="http://jsconf.com/codeofconduct.html">JSConf Code of Conduct</a>. We all want these couple of days to be unforgettable, so let's just have a great time!</p>
+		<p>We love our community and we <a href="http://bit.ly/wr-love">gave away 30% of the profits made last year</a> to community groups throught the Nordic region.</p>
 
-<h2>Contact us</h2>
-<p>Any questions you might have, please do not hesitate to <a href="mailto:boyhowdy[ replace this bracket with a @ ]webrebels.org&gt;">shoot us an email</a> or contact us <a href="http://twitter.com/web_rebels/">on the twitters</a>.</p>
-<% include snips/footer.ejs %>
+		<p>We love all things related to developing on and for the web: the cornerstones today like JavaScript and standards, new languages such as TypeScript or mature alternatives such as ClojureScript, potentially disruptive technology like WebRTC or PhoneGap , and the tools we use to create amazing experiences. We would love to have people talk about all of it at our conference!</p>
+
+		<p>Everyone taking part in the Web Rebels Conference must abide by the <a href="http://jsconf.com/codeofconduct.html">JSConf Code of Conduct</a>. We all want these couple of days to be unforgettable, so let's just have a great time!</p>
+
+		<h2>Contact us</h2>
+		<p>Any questions you might have, please do not hesitate to <a href="mailto:boyhowdy[ replace this bracket with a @ ]webrebels.org&gt;">shoot us an email</a> or contact us <a href="http://twitter.com/web_rebels/">on the twitters</a>.</p>
+    </article>
+    <% include snips/footer.ejs %>
+</body>
+</html>
