--- a/views/openmic.ejs
+++ b/views/openmic.ejs
@@ -1,26 +1,48 @@
-<% include snips/head.ejs %>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" id="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/style.css">
+    <title><%=pageTitle%></title>
+    <script>
+        var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26864429-1']); _gaq.push(['_setDomainName', 'webrebels.org']); _gaq.push(['_trackPageview']);
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+</head>
+<body class="page">
 
-<h1>Open Mic Night</h1>
+    <% include snips/logo.ejs %>
+    <% include snips/menu.ejs %>
 
-	<p>At <a href="http://2012.webrebels.org/openmic/">last years Open Mic Night</a> attendants and speakers got to hang out and listen to some briliant talks by some of the amazing local talent. One of them is a speaker at this years conference. This is exactly why we hosted the Open Mic Night, to help promote new talent!</p>
+    <article class="wrap">
+		<h1>Open Mic Night</h1>
 
-	<!-- http://www.flickr.com/photos/leftiefriele/7284916640/-->
+		<p>At <a href="http://2012.webrebels.org/openmic/">last years Open Mic Night</a> attendants and speakers got to hang out and listen to some briliant talks by some of the amazing local talent. One of them is a speaker at this years conference. This is exactly why we hosted the Open Mic Night, to help promote new talent!</p>
 
-	<p>There is always a first time for everything. There is a first time for when you laid your hand on a keyboard, there is a first time for when you wrote "hello world" and there is a first time for when you released some code you wrote.</p>
-	<p>We have picked some awesome rock stars to speak at Web Rebels. They are experienced in the art of public speaking. But; there was also a first time for them when they first spoke in public.</p>
-	<p>When you see them up there on the stage they might look like gurus, but they are no different from everyone else. They sure are good in what they do, but they are only different in the fact that they have taken the step to speak in public.</p>
-	<p>Through organizing <a href="http://www.meetup.com/framsia/">meet-ups</a> on a regular basis and keeping our eyes open for what’s going on around us, we see so much cool stuff being done by not yet rock stars. You attendees know so much and create so much amazing stuff that we are regularly blown away. We think you should be given the chance to show off. But; yes, we know, that first step can be tricky to take.</p>
-	<p>So, we would like to create an environment where those who would love to try or take the first step towards public speaking can get a chance to do so during Web Rebels.</p>
-	<h2>Here's how Open Mic Night works</h2>
-	<ul>
-		<li>Open Mic Night is a small pre-party</li>
-		<li>Batches of 10 minute lightening talks</li>
-		<li>Hang out with speakers and attendants whom you'll be spending the next couple of days with</li>
-	</ul>
-	<p>On the 24th of May we will host a small pre-party. During this pre-party we will run a few 30 minutes open mic lightning talk sessions. The location is large enough for most of our attendees, but the stage area will be small and intimate. Its all shoulders down in a relaxed environment with no high expectations. Think of this as a pre-party where you get to know everyone who will be at the conference and this is an opportunity to get a head start before the big event.</p>
-	<p><strong>Dear attendee; this is your night!</strong></p>
+		<!-- http://www.flickr.com/photos/leftiefriele/7284916640/-->
 
-	<p>If you would like to try yourself on the stage you are more then welcome too. Prepare a  talk, ~10 minutes, on any relevant topic you like and send us your abstract in an email to <a href="mailto:openmic@webrebels.org">openmic@webrebels.org</a> before the 20th of May with your name and the title of your talk and we will give you the stage!</p>
-	
-            
-<% include snips/footer.ejs %>
+		<p>There is always a first time for everything. There is a first time for when you laid your hand on a keyboard, there is a first time for when you wrote "hello world" and there is a first time for when you released some code you wrote.</p>
+		<p>We have picked some awesome rock stars to speak at Web Rebels. They are experienced in the art of public speaking. But; there was also a first time for them when they first spoke in public.</p>
+		<p>When you see them up there on the stage they might look like gurus, but they are no different from everyone else. They sure are good in what they do, but they are only different in the fact that they have taken the step to speak in public.</p>
+		<p>Through organizing <a href="http://www.meetup.com/framsia/">meet-ups</a> on a regular basis and keeping our eyes open for what’s going on around us, we see so much cool stuff being done by not yet rock stars. You attendees know so much and create so much amazing stuff that we are regularly blown away. We think you should be given the chance to show off. But; yes, we know, that first step can be tricky to take.</p>
+		<p>So, we would like to create an environment where those who would love to try or take the first step towards public speaking can get a chance to do so during Web Rebels.</p>
+		<h2>Here's how Open Mic Night works</h2>
+		<ul>
+			<li>Open Mic Night is a small pre-party</li>
+			<li>Batches of 10 minute lightening talks</li>
+			<li>Hang out with speakers and attendants whom you'll be spending the next couple of days with</li>
+		</ul>
+		<p>On the 24th of May we will host a small pre-party. During this pre-party we will run a few 30 minutes open mic lightning talk sessions. The location is large enough for most of our attendees, but the stage area will be small and intimate. Its all shoulders down in a relaxed environment with no high expectations. Think of this as a pre-party where you get to know everyone who will be at the conference and this is an opportunity to get a head start before the big event.</p>
+		<p><strong>Dear attendee; this is your night!</strong></p>
+
+		<p>If you would like to try yourself on the stage you are more then welcome too. Prepare a  talk, ~10 minutes, on any relevant topic you like and send us your abstract in an email to <a href="mailto:openmic@webrebels.org">openmic@webrebels.org</a> before the 20th of May with your name and the title of your talk and we will give you the stage!</p>
+    </article>
+    <% include snips/footer.ejs %>
+</body>
+</html>
