--- a/views/sponsors.ejs
+++ b/views/sponsors.ejs
@@ -1,10 +1,32 @@
-<% include snips/head.ejs %>
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" id="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/style.css">
+    <title><%=pageTitle%></title>
+    <script>
+        var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26864429-1']); _gaq.push(['_setDomainName', 'webrebels.org']); _gaq.push(['_trackPageview']);
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
+</head>
+<body class="page">
 
-<h1>Our beloved sponsors!</h1>
+    <% include snips/logo.ejs %>
+    <% include snips/menu.ejs %>
 
-<p>We want you to help contribute to making the conference better. Our focus is to create mutual benefits for sponsors and attendees by creating amazing experiences. We want to work with our sponsors to help you promote your brand, launch your product or whatever you have in mind.</p>
+    <article class="wrap">
+		<h1>Our beloved sponsors!</h1>
 
-<p>Sounds interesting? <a href="mailto:sponsors[ replace this bracket with a @ ]webrebels.org&gt;">Contact us today</a></p>
+		<p>We want you to help contribute to making the conference better. Our focus is to create mutual benefits for sponsors and attendees by creating amazing experiences. We want to work with our sponsors to help you promote your brand, launch your product or whatever you have in mind.</p>
 
-
-<% include snips/footer.ejs %>
+		<p>Sounds interesting? <a href="mailto:sponsors[ replace this bracket with a @ ]webrebels.org&gt;">Contact us today</a></p>
+    </article>
+    <% include snips/footer.ejs %>
+</body>
+</html>
