--- a/views/location.ejs
+++ b/views/location.ejs
@@ -71,7 +71,7 @@
         <h2>Getting to the venue</h2>
 
         <strong>Walking</strong>
-        <p>You can <a href="http://www.vulkanoslo.no/download.aspx?object_id=9A47978347B74EF395B7CCAF545A16E2.pdf">download a map</a> create by the owenrs of a venu just in case.</p>
+        <p>You can <a href="http://www.vulkanoslo.no/download.aspx?object_id=9A47978347B74EF395B7CCAF545A16E2.pdf">download a map</a> created by the owners of a venue nearby.</p>
 
         <strong>Tram (recommended)</strong>
         <p>Lines 11, 12 and 13 all stop at <strong>Schous plass</strong> where you can walk down Nordregate and across the bridge to Vulkan</p>
