--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,27 +1,8 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" id="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,initial-scale=1.0">
-    <link href='http://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/style.css">
-    <title><%=pageTitle%></title>
-    <script>
-        var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-26864429-1']); _gaq.push(['_setDomainName', 'webrebels.org']); _gaq.push(['_trackPageview']);
-        (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-</head>
-<body class="page">
-
-    <% include snips/logo.ejs %>
-    <% include snips/menu.ejs %>
+<% include snips/head.ejs %>
 
     <article class="wrap">
 		<a class="fullWidthImg" href="http://www.flickr.com/photos/webrebels/7280977004/"><img src="/gfx/lagbilde_color.jpg"></a>
+<p>We love our community and we <a href="http://bit.ly/wr-love">gave away 30% of the profits</a> made <a href="http://2012.webrebels.org">last years conference</a> to community groups throught the Nordic region.</p>
 
 		<h1>About the Web Rebels Conference</h1>
 		<p>The Web Rebels conference takes place on the 23-24th of May 2013 in Oslo, Norway. We are a non-profit, community driven conference for everyone who loves developing applications and services using web technology. We had a great time hosting the conference for the first time last year and we are very excited to once again welcome all of our friends around the world!</p>
