--- a/views/snips/menu.ejs
+++ b/views/snips/menu.ejs
@@ -1,12 +1,13 @@
 <menu class="menu">
     <div class="left">
-        <a href="/speakers/">Speakers</a>
-        <a href="/tickets/">Tickets</a>
         <a href="/location/">Location</a>
+        <a href="/tickets/">Tickets</a>
+        <a href="/speakers/">Speakers</a>
+        <a href="/">Home</a>
     </div>
     <div class="right">
         <a href="/schedule/">Schedule</a>
-        <a href="/about/">About</a>
         <a href="/sponsors/">Sponsors</a>
+        <a href="/about/">About</a>
     </div>
 </menu>
