--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -31,7 +31,7 @@
         		<tr>
         			<td>-- : --</td>
         			<td>Marius Gundersen</td>
-        			<td></td>
+        			<td>JavaScript libs internals</td>
         		</tr>
         		<tr>
         			<td>-- : --</td>
@@ -46,7 +46,7 @@
         		<tr>
         			<td>-- : --</td>
         			<td>Robert Nyman</td>
-        			<td></td>
+        			<td>Keynote</td>
         		</tr>
         		<tr>
         			<td>-- : --</td>
